# routes/request_api.py
@@ -1,8 +1,7 @@
 """The Endpoints to manage the Geth Actions"""
 import json
-import re
-import docker
-from flask import  abort, request, Blueprint
+from routes.docker_api import get_running_networks, remove_network
+from flask import  abort, Blueprint
 from subprocess import Popen, PIPE
 import configparser
 from  difflib import get_close_matches as gcm
@@ -17,34 +16,17 @@ config.read('conf.ini')
 PATH= config['DEFAULT']['PATH'] #add your path to framework
 PWD= config['DEFAULT']['PWD']#sudo password 
 INIT_PATH= config['DEFAULT']['INIT_PATH']
-GETH_API = Blueprint('geth_api', __name__)
+GETH_API = Blueprint('traffic_api', __name__)
 BLOCKCHAINS= ['geth', 'xrpl', 'besu-poa', 'stellar-docker-testnet']
 
 
-Active_Networks=set()
-@GETH_API.route("/request/running_networks", methods=['GET'])
-def get_running_networks():
-    """Return the available networks"""
-    import os 
-    #print(os.system("docker stats $(docker ps -q)"))
-    client = docker.DockerClient(base_url='unix:///var/run/docker.sock')
-    c=client.containers.list(all=True)
-    a=[container.name for container in c]  
-    if ([i for i in a if i.startswith('xrpl')]):
-        Active_Networks.add("xrpl") 
-    if ([i for i in a if i.startswith('geth')]):
-        Active_Networks.add("geth") 
-    if ([i for i in a if i.startswith('besu')]):
-        Active_Networks.add("besu-poa") 
-    if ([i for i in a if i.startswith('stellar')]):
-        Active_Networks.add("stellar")
-    return json.dumps(list(Active_Networks))
-
-
-def control_command(network, command): #
+def control_command(network, command, sudo): #
   
-    cmd=f" {PATH}/{network}/control.sh {command} "
-    session = Popen(['echo {} | sudo -S {}'.format(PWD, cmd)],shell=True, stdout=PIPE, stderr=PIPE)
+    cmd=f"cd {INIT_PATH} && ./control.sh {network} {command}"
+    if sudo == True:
+        cmd=f"cd {INIT_PATH} && echo {PWD} | sudo -S ./control.sh {network} {command}"
+    print(cmd)
+    session = Popen([cmd],shell=True, stdout=PIPE, stderr=PIPE)
     stdout, stderr = session.communicate()
     print(stdout)
     if stderr:
@@ -72,7 +54,7 @@ def get_status(network):
     network=compile_network_name(network)
     if network not in BLOCKCHAINS:
          abort(404)
-    st =control_command(network,'status')
+    st =control_command(network,'status', sudo=False)
     s=[]
     for i in range(4, len(st)-1):
         s.append(st[i])
@@ -89,7 +71,7 @@ def post_start(network, NUM_OF_NODES):
     if network not in BLOCKCHAINS:
          abort(404)
     print(f'Start {NUM_OF_NODES} Nodes') #later we will let the user from the interface to choose this number 
-    return json.dumps(control_command(network,f'start -n {NUM_OF_NODES}'))
+    return json.dumps(control_command(network,f'start -n {NUM_OF_NODES}', sudo=False))
 
 
 @GETH_API.route('/request/<string:network>/clean', methods=['DELETE'])
@@ -102,7 +84,7 @@ def clean(network):
     if network not in BLOCKCHAINS:
          abort(404)
     print('CLEAN') #later we will let the user from the interface to choose this number 
-    return json.dumps(control_command(network,'clean'))
+    return json.dumps(control_command(network,'clean', sudo=True))
 
 @GETH_API.route('/request/<string:network>/configure/<int:NUM_OF_NODES>', methods=['PUT'])
 def put_configure(network, NUM_OF_NODES):
@@ -115,7 +97,7 @@ def put_configure(network, NUM_OF_NODES):
     if network not in BLOCKCHAINS:
          abort(404)
     print('Configure 5 Nodes') #later we will let the user from the interface to choose this number 
-    return json.dumps(control_command(network,f'configure -n {NUM_OF_NODES}'))
+    return json.dumps(control_command(network,f'configure -n {NUM_OF_NODES}', sudo=False))
 
 
 @GETH_API.route('/request/<string:network>/stop', methods=['DELETE'])
@@ -126,82 +108,9 @@ def stop(network):
     if network not in BLOCKCHAINS:
          abort(404)
     print('stop nodes') #later we will let the user from the interface to choose this number with configure
-    Active_Networks.remove(str(network))
-    return json.dumps(control_command(network,'stop'))
+    remove_network(str(network))
+    return json.dumps(control_command(network,'stop', sudo=False))
 
-
-@GETH_API.route('/request/<string:network>/mon', methods=['GET', 'POST', 'DELETE'])
-#begin with this action for the framework
-def monitoring(network):
-    network=compile_network_name(network)
-    if network not in BLOCKCHAINS:
-         abort(404)
-    if request.method == 'GET': #configure the monitoring        
-        return json.dumps(control_command(network,'-mon prom-monitoring-stack configure')) 
-    elif request.method == 'POST': #start the monitoring
-        return json.dumps(control_command(network,'-mon prom-monitoring-stack start')) 
-    else:
-        return json.dumps(control_command(network,'-mon prom-monitoring-stack stop')) 
-
-@GETH_API.route('/traffic/<string:network>/traffic', methods=['GET'])
-#begin with this action for the framework
-def traffic(network):
-    
-    network=compile_network_name(network)
-    if network not in BLOCKCHAINS:
-             abort(404)
-    command = 'traffic_gen.sh  10 1000'
-    cmd=f" {PATH}/{network}/{network}_traffic_generator/{command} "
-    session = Popen(['echo {} | sudo -S {}'.format(PWD, cmd)],shell=True, stdout=PIPE, stderr=PIPE)
-    stdout, stderr = session.communicate()
-    print(stdout)
-    if stderr:
-        print(stderr)
-        return json.dumps(stderr.decode('utf-8').replace("'", '"'))
-    stdout=stdout.decode('utf-8').replace("'", '"')
-    st= stdout.splitlines()   
-    return json.dumps(st) 
-    
-@GETH_API.route('/traffic/<string:network>/node', methods=['GET'])
-#begin with this action for the framework
-def node(network):
-    
-    network=compile_network_name(network)
-    if network not in BLOCKCHAINS:
-             abort(404)
-    cmd=f"{PATH}/{network}/{network}_traffic_generator/"
-    session = Popen([f'cd {cmd} &&   node server_info.js'],shell=True, stdout=PIPE, stderr=PIPE)
-    stdout, stderr = session.communicate()
-    print(stdout)
-    if stderr:
-        print(stderr)
-        return json.dumps(stderr.decode('utf-8').replace("'", '"'))
-    stdout=stdout.decode('utf-8').replace("'", '"')
-    st= stdout.splitlines()
-    return json.dumps(st)
-
-@GETH_API.route('/traffic/<string:network>/acc/<string:public_key>', methods=['POST'])
-#begin with this action for the framework
-def acc(network,public_key):
-    
-    network=compile_network_name(network)
-    if network not in BLOCKCHAINS:
-             abort(404)
-    cmd=f"{PATH}/{network}/{network}_traffic_generator/"
-    import time
-   
-    session = Popen([f'cd {cmd} &&   node acc_info.js {public_key}'],shell=True, stdout=PIPE, stderr=PIPE)
- 
-    stdout, stderr = session.communicate()
-    
-    print(stdout)
-    if stderr:
-        print(stderr)
-        return json.dumps(stderr.decode('utf-8').replace("'", '"'))
-    stdout=stdout.decode('utf-8').replace("'", '"')
-    st= stdout.splitlines()
-    return json.dumps(st) 
- 
 
 @GETH_API.route('/request/list', methods=['GET'])
 #begin with this action for the framework
@@ -215,24 +124,3 @@ def show_list():
         abort(404)
     stdout=stdout.decode('utf-8').splitlines()     
     return json.dumps(stdout) 
-@GETH_API.route('/docker/managment/stats', methods=['GET'])
-#begin with this action for the framework
-def docker_stats():
-   container_Stats=[]
-   client = docker.DockerClient(base_url='unix:///var/run/docker.sock')
-   c=client.containers.list(all=True)
-   for container in c:
-    
-    container_Stats.append(container.stats(decode=False,stream=False))
-   print(container_Stats)
-   return json.dumps(container_Stats)
-
-@GETH_API.route('/docker/managment/list', methods=['GET'])
-#returns the container list information
-def docker_list():
-   client = docker.from_env()
-   container_dict=[]
-   for container in client.containers.list():
-        container_dict.append({"Container_name": container.name,"Container_ID":container.short_id,"Container_status": container.status,"Container_image":re.search(r"\'(.*?)\'",str(container.image)).group(1) })
-
-   return json.dumps(container_dict)
